objects/cfp_urls__c.object
<CustomObject>
    <fields>
        <fullName>CFP_Session_URL__c</fullName>
        <description>Name is Self explanatory</description>
        <label>CFP Session URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CFP_Support_URL__c</fullName>
        <description>Name is Self explanatory</description>
        <label>CFP Support URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order_Management_URL__c</fullName>
        <description>Name is Self explanatory</description>
        <label>Order Management URL</label>
        <type>Url</type>
    </fields>
</CustomObject>